# tekton-dag

./: .cache_ggshield  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  PR-TELEPRESENCE-INTERCEPT-CONFIRMATION.md  README.md  RELEASE_FRONTEND_SPEC.md  SHARING-BACK.md
argocd/: applicationset.yaml  appproject.yaml
build-images/: Dockerfile.gradle  Dockerfile.maven  Dockerfile.mirrord  Dockerfile.node  Dockerfile.php  Dockerfile.python  README.md  build-and-push.sh
ci/: docgen-demo-function-smoke.docgen.yaml
docs/: AGENT-REGRESSION.md  CLOUDFLARE-TUNNEL-EVENTLISTENER.md  CUSTOMIZATION.md  DAG-AND-PROPAGATION.md  ENVIRONMENTS-AND-CLUSTERS.md  GITHUB-PAGES.md  MAINTENANCE.md  MANAGEMENT-GUI-EXTENSION.md  PR-TEST-FLOW.md  PR-WEBHOOK-TEST-FLOW.md  README-FULL.md  README.md  REGRESSION.md  SCRIPTS.md  TEAM-ONBOARDING-STACKS-AND-BAGGAGE.md  TESTING-AND-REGRESSION-OVERVIEW.md  argocd-architecture-guide.md  bootstrap-pipeline-speed-analysis.md  c4-diagrams.md  demo-playbook.md  index.html  local-dag-verification-plan.md  m10-multi-team-architecture.md  m4-baggage-libraries-overview.md  m4-eventlistener-per-namespace.md  (+7 more)
libs/baggage-python/: README.md  pyproject.toml  setup.cfg
libs/baggage-python/tekton_dag_baggage/: __init__.py
libs/baggage-python/tests/: test_baggage.py
libs/tekton-dag-common/: pyproject.toml
libs/tekton-dag-common/tekton_dag_common/: __init__.py  k8s_constants.py  pipelinerun_builder_base.py  stack_resolver_base.py
libs/tekton-dag-common/tests/: test_pipelinerun_builder_base.py  test_stack_resolver_base.py
(+351 files in other folders)
